--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: python
 
 python:
-  - "3.3"
+    - "3.3"
+  
+before_install:
+    - openssl aes-256-cbc -K $encrypted_7973a1a3a036_key -iv $encrypted_7973a1a3a036_iv -in \–add -out deploy_rsa -d
 
 script:
-  - python test.py
+    - python test.py
