--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,33 @@ language: python
 
 python:
     - "3.3"
+    
+script:
+    - python test.py
   
 before_install:
     - openssl aes-256-cbc -K $encrypted_7973a1a3a036_key -iv $encrypted_7973a1a3a036_iv -in \–add -out deploy_rsa -d
+      -in deploy_rsa.enc -out deploy_rsa -d
+dd:
+- openssl aes-256-cbc -K $encrypted_7973a1a3a036_key -iv $encrypted_7973a1a3a036_key
+  -in deploy_rsa.enc -out deploy_rsa -d
 
-script:
-    - python test.py
+addons:
+  ssh_known_hosts: moon.scs.ryerson.ca
+  
+before_deploy:
+- openssl aes-256-cbc 
+    -K $encrypted_7973a1a3a036_key -iv $encrypted_7973a1a3a036_key 
+    -in deploy_rsa.enc -out /tmp/deploy_rsa -d
+- eval "$(ssh-agent -s)"
+- chmod 600 /tmp/deploy_rsa
+- ssh-add /tmp/deploy_rsa
+
+deploy:
+  provider: script
+  skip_cleanup: true
+  script: rsync -r --delete-after --quiet $TRAVIS_BUILD_DIR/git_tst bacunnin@moon.scs.ryerson.ca:/home
+  on:
+    branch: master
+
+
