--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ script:
     - python test.py
   
 before_install:
-    - openssl aes-256-cbc -K $encrypted_7973a1a3a036_key -iv $encrypted_7973a1a3a036_iv -in \–add -out deploy_rsa -d
+    - openssl aes-256-cbc -K $encrypted_7973a1a3a036_key -iv $encrypted_7973a1a3a036_iv
       -in deploy_rsa.enc -out deploy_rsa -d
 dd:
 - openssl aes-256-cbc -K $encrypted_7973a1a3a036_key -iv $encrypted_7973a1a3a036_key
